fix some code specification